# discovery-cli

./: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
config/: .gitignore  2_deploy_contracts.js  Cargo.toml  lib.rs  nginx.conf  package.json  test_simple_addition.js
doc/: Installation.md
docs/: Installation.md
src/: constants.js  contracts.js  deps.js  docker.js  index.js  migrate.js  questions.js
