[package]
name = "contract"
version = "0.1.0"

[dependencies]
eng-wasm = { git = "https://github.com/enigmampc/enigma-core.git", branch = "develop" }
eng-wasm-derive = { git = "https://github.com/enigmampc/enigma-core.git", branch = "develop" }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"